# save-converters

./: .gitignore  CONTRIBUTING.md  README.md  hatch_build.py  pylock.toml  pyproject.toml  save_converter.py  save_converter.spec
.github/workflows/: package.yml  run_test.yml
cheat_tables/: Tales of Vesperia Definitive Edition DLC Validation Skip.CT
pyinstaller-hooks/: hook-save_convert.py
save_convert/: __init__.py  save_convert_base.py  vesperia_save_converter.py  vesperia_title_id_list.py
save_convert/tales_of/vesperia/: README.md  tales_of_vesperia_save_converter.py  vesperia_save_converter.py
save_convert/trails_of/: trails_of_cold_steel_base_converter.py
save_convert/trails_of/cold_steel_i/: README.md  save_NOTES.md  trails_of_cold_steel_i_save_converter.py
save_convert/trails_of/cold_steel_i/cheat_tables/: AutoAttachToProcess.CT
save_convert/trails_of/cold_steel_ii/: README.md  save_NOTES.md  trails_of_cold_steel_ii_save_converter.py
save_convert/trails_of/cold_steel_ii/cheat_tables/: AutoAttachToProcess.CT
save_convert/trails_of/cold_steel_iii/: README.md  save_NOTES.md  trails_of_cold_steel_iii_save_converter.py
save_convert/trails_of/cold_steel_iii/cheat_tables/: Trails of Cold Steel III Disable Save Validation Check (Default Active).CT
save_convert/trails_of/cold_steel_iv/: README.md  save_NOTES.md  trails_of_cold_steel_iv_save_converter.py
save_convert/trails_of/cold_steel_iv/cheat_tables/: Trails of Cold Steel IV Disable Save Checksum.CT
save_convert/trails_of/reverie/: README.md  save_NOTES.md  trails_into_reverie_save_converter.py
save_convert/trails_of/reverie/cheat_tables/: Trails into Reverie Disable Save Checksum.CT
test/: test_vesperia_converter.py
tests/: test_tales_of_vesperia_converter.py  test_trails_into_reverie_converter.py  test_trails_of_cold_steel_i_converter.py  test_trails_of_cold_steel_ii_converter.py  test_trails_of_cold_steel_iii_converter.py  test_trails_of_cold_steel_iv_converter.py  test_vesperia_converter.py
tests/test_files/: SAVE.pc
tests/test_files/cold_steel_i/: SAVE.ps4
tests/test_files/cold_steel_ii/: SAVE.ps4
tests/test_files/cold_steel_iii/: SAVE.ps4
tests/test_files/cold_steel_iv/: SAVE.ps4
tests/test_files/reverie/: SAVE.ps4
tests/test_files/vesperia/: SAVE.ps3
